Pagina Pronta para Fins de Estudo Somente

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button type="submit">Entrar</button><br>
                  <p class="ou">OU</p> 
                 <h3><img src="./images/facebook.png" alt="" class="facebook"> <a href="https://pt-br.facebook.com/" class="facebook">Entrar com Facebook</a> </h3><br>
-                <a href="#" class="esqueceu">Esqueceu a senha?</a>
+                <a href="reset.html" class="esqueceu">Esqueceu a senha?</a>
             </form>
         </div>
       
